# rexxlings

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
exercises/: info.toml
exercises/00-intro/: 01-hello.rexx  02-comments.rexx  03-strings.rexx
exercises/01-variables/: 01-say.rexx  02-assignment.rexx  03-uninitialized.rexx  04-concat-blank.rexx  05-concat-abuttal.rexx  06-concat-combined.rexx
exercises/02-arithmetic/: 01-addition.rexx  02-multiply.rexx  03-integer-div.rexx  04-power.rexx  05-precedence.rexx  06-comparison.rexx  07-logical.rexx
exercises/03-strings-intro/: 01-length.rexx  02-substr.rexx  03-left-right.rexx  04-copies.rexx  05-reverse.rexx  06-pos.rexx
exercises/04-conditionals/: 01-if-then.rexx  02-if-else.rexx  03-nested-if.rexx  04-nop.rexx  05-compound.rexx  06-strict-comparison.rexx
exercises/05-select/: 01-basic-select.rexx  02-otherwise.rexx  03-do-blocks.rexx  04-nested-select.rexx  05-fizzbuzz.rexx
exercises/06-do-loops/: 01-simple-do.rexx  02-do-count.rexx  03-do-by.rexx  04-do-forever.rexx  05-do-while.rexx  06-do-until.rexx  07-leave.rexx  08-iterate.rexx  09-nested-loops.rexx
exercises/07-string-bifs/: 01-strip.rexx  02-translate.rexx  03-space.rexx  04-overlay.rexx  05-insert.rexx  06-delstr.rexx  07-changestr.rexx  08-compare.rexx
exercises/08-word-bifs/: 01-words-word.rexx  02-wordindex.rexx  03-subword.rexx  04-wordpos.rexx  05-delword.rexx  06-iteration.rexx  07-combined.rexx
exercises/09-parse/: 01-word-split.rexx  05-dot.rexx  (+5 more)
src/: exercise.rs  main.rs  runner.rs
(+341 files in other folders)
