[package]
name = "rexxlings"
version = "0.1.0"
edition = "2024"
description = "Interactive exercises for learning REXX, a classic scripting language"
license = "MIT"
repository = "https://github.com/navicore/rexxlings"

[[bin]]
name = "rexxlings"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
colored = "2"
ctrlc = "3"
notify = "7"
notify-debouncer-mini = "0.5"
include_dir = "0.7"
